[package]
name = "zap_2_12"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5"
openssh = "0.11"
tokio = { version = "1.36.0", features = [
    "process",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
] }
futures = "0.3"
tokio-test = "0.4.2"
anyhow = "1"
async-recursion = "1.1"
